# tz_skypro

./: README.md  manage.py  pyproject.toml  pytest.ini
resume/: models.py  permissions.py  serializers.py  urls.py  views.py
resume/migrations/: 0001_initial.py  0002_resume_author.py
tests/: fixtures.py
tests/resume_tests/: resume_tests.py
tz_part2/: asgi.py  settings.py  urls.py  wsgi.py
